# Intelliarm

./: README.md
armbot_cpp/: CMakeLists.txt  package.xml
armbot_cpp/launch/: display.launch.py  gazebo.launch.py
armbot_cpp/rviz/: display.rviz
armbot_cpp/urdf/: bot.urdf.xacro  bot_gazebo.xacro
bot_bringup/: CMakeLists.txt  package.xml
bot_bringup/launch/: simulated_robot.launch.py
bot_controller/: CMakeLists.txt  package.xml
bot_controller/config/: bot_controllers.yaml
bot_controller/launch/: controller.launch.py
bot_examples_cpp/: CMakeLists.txt  package.xml
bot_examples_cpp/src/: simple_moveit_interface.cpp
bot_moveit/: CMakeLists.txt  package.xml
bot_moveit/config/: bot.srdf  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  pilz_cartesian_limits.yaml
bot_moveit/launch/: moveit.launch.py
bot_msgs/: CMakeLists.txt  package.xml
bot_msgs/action/: BotTask.action  CamelCase.action
bot_msgs/srv/: EulerToQuaternion.srv
bot_remote/: CMakeLists.txt  package.xml
bot_remote/bot_remote/: alexa.py  alexa_interface.py  llm.py  summa.py
bot_remote/bot_remote/templates/: firstindex.html  index.html
bot_remote/launch/: remote_interface.launch.py
bot_remote/src/: task_server.cpp
bot_utils/: CMakeLists.txt  package.xml
bot_utils/bot_utils/: angle_conversion.py
