<?xml version="1.0"?>
<package format="3">
  <name>bot_msgs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="vj@todo.todo">vj</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rcl_interfaces</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <member_of_group>rosidl_interface_packages</member_of_group>
    <build_type>ament_cmake</build_type>
  </export>
</package>